--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "lucide-react": "^0.263.1",
-    "firebase": "^10.7.1"
+    "firebase": "^10.7.1",
+    "@emailjs/browser": "^3.11.0"
   },
   "scripts": {
     "dev": "vite",
